--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "webapp",
+    "name": "surveyapp",
     "version": "0.1.0",
     "private": true,
     "homepage": "/",
@@ -13,6 +13,7 @@
         "@testing-library/user-event": "^13.2.1",
         "@types/history": "^4.7.9",
         "@types/jest": "^27.0.2",
+        "@types/lodash": "^4.14.174",
         "@types/node": "^16.9.6",
         "@types/react": "^17.0.24",
         "@types/react-dom": "^17.0.9",
@@ -20,6 +21,7 @@
         "@types/react-router-dom": "^5.3.0",
         "axios": "^0.21.4",
         "connected-react-router": "^6.9.1",
+        "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
