--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
         "@types/lodash": "^4.14.174",
         "@types/node": "^16.9.6",
         "@types/react": "^17.0.24",
+        "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^17.0.9",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-dom": "^5.3.0",
         "axios": "^0.21.4",
         "connected-react-router": "^6.9.1",
+        "crypto-random-string": "^4.0.0",
         "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
         "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
+        "react-images-uploading": "^3.1.3",
         "react-redux": "^7.2.5",
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
