--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-select": "^5.1.0",
         "redux": "^4.1.1",
         "typescript": "^4.4.3",
+        "utility": "^1.17.0",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
