--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/node": "^16.9.6",
         "@types/react": "^17.0.24",
         "@types/react-beautiful-dnd": "^13.1.2",
+        "@types/react-copy-to-clipboard": "^5.0.1",
         "@types/react-dom": "^17.0.9",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-dom": "^5.3.0",
@@ -28,6 +29,7 @@
         "mdi-react": "^7.5.0",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
+        "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
         "react-images-uploading": "^3.1.3",
         "react-number-format": "^4.7.3",
