--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-beautiful-dnd": "^13.1.0",
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
+        "react-image": "^4.0.3",
         "react-images-uploading": "^3.1.3",
         "react-number-format": "^4.7.3",
         "react-redux": "^7.2.5",
