--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "crypto-random-string": "^4.0.0",
         "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
+        "notistack": "^2.0.2",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-copy-to-clipboard": "^5.0.4",
