--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/jest": "^27.0.2",
         "@types/lodash": "^4.14.176",
         "@types/node": "^16.11.6",
+        "@types/qrcode.react": "^1.0.2",
         "@types/react": "^17.0.33",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-copy-to-clipboard": "^5.0.2",
@@ -27,9 +28,11 @@
         "connected-react-router": "^6.9.1",
         "crypto-random-string": "^4.0.0",
         "date-fns": "^2.25.0",
+        "form-urlencoded": "^6.0.5",
         "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
         "notistack": "^2.0.2",
+        "qrcode.react": "^1.0.1",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-copy-to-clipboard": "^5.0.4",
