--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/jest": "^27.0.2",
         "@types/lodash": "^4.14.176",
         "@types/node": "^16.11.6",
+        "@types/numeral": "^2.0.2",
         "@types/qrcode.react": "^1.0.2",
         "@types/react": "^17.0.33",
         "@types/react-beautiful-dnd": "^13.1.2",
@@ -24,6 +25,7 @@
         "@types/react-dom": "^17.0.10",
         "@types/react-redux": "^7.1.20",
         "@types/react-router-dom": "^5.3.2",
+        "@types/react-scroll": "^1.8.3",
         "axios": "^0.21.4",
         "connected-react-router": "^6.9.1",
         "crypto-random-string": "^4.0.0",
@@ -32,6 +34,7 @@
         "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
         "notistack": "^2.0.2",
+        "numeral": "^2.0.6",
         "qrcode.react": "^1.0.1",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
@@ -43,7 +46,9 @@
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-scroll": "^1.8.4",
         "react-select": "^5.1.0",
+        "recharts": "^2.1.6",
         "redux": "^4.1.1",
         "typescript": "^4.4.4",
         "utility": "^1.17.0",
