ui: analysis page 2

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "@emotion/styled": "^11.3.0",
         "@mui/lab": "^5.0.0-alpha.53",
         "@mui/material": "^5.0.6",
+        "@nivo/circle-packing": "^0.74.0",
+        "@nivo/core": "^0.74.0",
+        "@nivo/generators": "^0.74.0",
         "@reduxjs/toolkit": "^1.6.2",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.1.2",
