--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "@types/react-redux": "^7.1.20",
         "@types/react-router-dom": "^5.3.2",
         "@types/react-scroll": "^1.8.3",
+        "@types/react-virtualized": "^9.21.14",
         "axios": "^0.21.4",
+        "clsx": "^1.1.1",
         "connected-react-router": "^6.9.1",
         "crypto-random-string": "^4.0.0",
         "date-fns": "^2.25.0",
@@ -51,6 +53,7 @@
         "react-scripts": "4.0.3",
         "react-scroll": "^1.8.4",
         "react-select": "^5.1.0",
+        "react-virtualized": "^9.22.3",
         "recharts": "^2.1.6",
         "redux": "^4.1.1",
         "typescript": "^4.4.4",
