--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/react-redux": "^7.1.20",
         "@types/react-router-dom": "^5.3.2",
         "@types/react-scroll": "^1.8.3",
+        "@types/react-slick": "^0.23.7",
         "@types/react-virtualized": "^9.21.14",
         "axios": "^0.21.4",
         "clsx": "^1.1.1",
@@ -53,9 +54,11 @@
         "react-scripts": "4.0.3",
         "react-scroll": "^1.8.4",
         "react-select": "^5.1.0",
+        "react-slick": "^0.28.1",
         "react-virtualized": "^9.22.3",
         "recharts": "^2.1.6",
         "redux": "^4.1.1",
+        "slick-carousel": "^1.8.1",
         "typescript": "^4.4.4",
         "utility": "^1.17.0",
         "web-vitals": "^2.1.2"
