--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "/",
     "dependencies": {
+        "@craco/craco": "^6.4.0",
         "@date-io/date-fns": "^2.11.0",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
@@ -37,6 +38,7 @@
         "crypto-random-string": "^4.0.0",
         "date-fns": "^2.25.0",
         "form-urlencoded": "^6.0.5",
+        "framer-motion": "^5.3.0",
         "lodash": "^4.17.21",
         "mdi-react": "^7.5.0",
         "notistack": "^2.0.2",
@@ -67,9 +69,9 @@
         "node-sass": "^6.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
