--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "react-virtualized": "^9.22.3",
         "recharts": "^2.1.6",
         "redux": "^4.1.1",
+        "rooks": "^5.8.0",
         "slick-carousel": "^1.8.1",
         "typescript": "^4.4.4",
         "utility": "^1.17.0",
