--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "notistack": "^2.0.2",
         "numeral": "^2.0.6",
         "qrcode.react": "^1.0.1",
+        "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-copy-to-clipboard": "^5.0.4",
