--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
         "react-images-uploading": "^3.1.3",
+        "react-joyride": "^2.3.2",
         "react-number-format": "^4.7.3",
         "react-redux": "^7.2.6",
         "react-router": "^5.2.1",
